--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 
+title: lz的个人空间
 subtitle: 
 description:
 keywords:
 author: lzlz000
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://lzlz000.github.io/blogs
-root: /blogs
+url: http://lzlz000.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -50,7 +50,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
   
 # Category & Tag
@@ -67,7 +67,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 20
 pagination_dir: page
 
 # Extensions
@@ -78,4 +78,10 @@ theme: false
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/lzlz000/lzlz000.github.io.git
+  branch: master
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
