--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,7 +1,7 @@
 # Header
 menu:
-  主页: /
-  归档: /archives
+  Home: /
+  Archives: /archives
 # rss: /atom.xml
 
 # Content
@@ -32,6 +32,6 @@ google_analytics:
 gauges_analytics:
 favicon: /favicon.ico
 twitter:
-google_plus:
+# google_plus:
 fb_admins:
-fb_app_id:
+# fb_app_id:
