--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ keywords:
 author: lzlz000
 language: zh-CN
 timezone:
-blackboard: 欢迎来到lz的个人空间
+blackboard: 自闭中（；´д｀）ゞ，<br>保证原创，尽量有趣
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
