--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: lzlz000的个人页
+title: lzlz000 (゜-゜)つロ
 subtitle: 
 description:
 keywords:
