--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: lzlz000 (゜-゜)つロ
+title: lzlz000
 subtitle: 
 description:
 keywords:
 author: lzlz000
 language: zh-CN
 timezone:
-blackboard: 自闭中（；´д｀）ゞ，<br>保证原创，尽量有趣
+blackboard: 自闭中（；´д｀）ゞ
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
