--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -2,7 +2,9 @@
 menu:
   主页: /
   归档: /archives
-# rss: /atom.xml
+  开往: https://travellings.now.sh/
+  
+rss: /atom.xml
 
 # Content
 excerpt_link: Read More
@@ -35,4 +37,4 @@ favicon: /favicon.ico
 twitter:
 # google_plus:
 fb_admins:
-# fb_app_id:
+# fb_app_id
