--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 3
+  per_page: 5
   order_by: -date
   
 # Category & Tag
@@ -86,3 +86,10 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
+  
+nofollow:
+  enable: true
+  field: site
+  exclude:
+    - 'lzlz.site'
+    - 'localhost'
