--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,6 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -74,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: false
+theme: fluid  
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -86,10 +85,3 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
-  
-nofollow:
-  enable: true
-  field: site
-  exclude:
-    - 'lzlz.site'
-    - 'localhost'
